--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700');
 @import "tailwindcss";
+
+@utility process-flow-heading {
+  font-family: var(--font-roboto);
+  font-size: 50.10px;
+  font-weight: 700;
+  color: var(--process-flow-heading);
+}
+
+@utility process-flow-subtitle {
+  font-family: var(--font-roboto);
+  font-size: 16.70px;
+  font-weight: 400;
+  line-height: 25.88px;
+  color: var(--process-flow-text);
+}
+
+@utility process-flow-label {
+  font-family: var(--font-roboto);
+  font-size: 16.70px;
+  font-weight: 500;
+  color: var(--process-flow-label-text);
+}
